--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,7 +48,8 @@
       }
     ],
     "import/prefer-default-export": "off",
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "react/jsx-props-no-spreading": "off"
   },
   "settings": {
     "import/resolver": {
