Adicionando o unform na tela de signin e signup

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,7 +49,8 @@
     ],
     "import/prefer-default-export": "off",
     "prettier/prettier": "error",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "arrow-parens": "off"
   },
   "settings": {
     "import/resolver": {
